--- a/Source/Engine/Engine.vcxproj.filters
+++ b/Source/Engine/Engine.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClCompile Include="..\Support\Include\ImGUI\ImGuiFileDialog.cpp">
       <Filter>ImGUI</Filter>
     </ClCompile>
+    <ClCompile Include="implBee.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -128,6 +131,15 @@
       <Filter>Engine Header</Filter>
     </ClInclude>
     <ClInclude Include="Config.h">
+      <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="implBee.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Object.h">
+      <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.h">
       <Filter>Core</Filter>
     </ClInclude>
   </ItemGroup>
