--- a/Source/Engine/Engine.vcxproj
+++ b/Source/Engine/Engine.vcxproj
@@ -23,14 +23,28 @@
     <ClInclude Include="EngineAPI.h"/>
     <ClInclude Include="GLMisc.h"/>
     <ClCompile Include="EngineAPI.cpp"/>
-    <ClCompile Include="implClass_Car.cpp"/>
-    <ClInclude Include="implClass_Car.h"/>
-    <ClCompile Include="implClass_Dog.cpp"/>
-    <ClInclude Include="implClass_Dog.h"/>
+    <ClCompile Include="implClass_Ground.cpp"/>
+    <ClInclude Include="implClass_Ground.h"/>
     <ClCompile Include="implComponent_Moving.cpp"/>
     <ClInclude Include="implComponent_Moving.h"/>
-    <ClCompile Include="implClass_Cat.cpp"/>
-    <ClInclude Include="implClass_Cat.h"/>
+    <ClCompile Include="implClass_B_Normal.cpp"/>
+    <ClInclude Include="implClass_B_Normal.h"/>
+    <ClCompile Include="implClass_B_NS.cpp"/>
+    <ClInclude Include="implClass_B_NS.h"/>
+    <ClCompile Include="implClass_B.cpp"/>
+    <ClInclude Include="implClass_B.h"/>
+    <ClCompile Include="implClass_B_Glass.cpp"/>
+    <ClInclude Include="implClass_B_Glass.h"/>
+    <ClCompile Include="implClass_B_Metal.cpp"/>
+    <ClInclude Include="implClass_B_Metal.h"/>
+    <ClCompile Include="implClass_B_Cartoon.cpp"/>
+    <ClInclude Include="implClass_B_Cartoon.h"/>
+    <ClCompile Include="implClass_House.cpp"/>
+    <ClInclude Include="implClass_House.h"/>
+    <ClCompile Include="implClass_Tree.cpp"/>
+    <ClInclude Include="implClass_Tree.h"/>
+    <ClCompile Include="implClass_Dog.cpp"/>
+    <ClInclude Include="implClass_Dog.h"/>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
